--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -64,6 +64,7 @@ dtb-$(CONFIG_ARCH_ZYNQ) += zynq-zc702.dtb \
 	zynq-zc706.dtb \
 	zynq-zed.dtb \
 	zynq-zturn.dtb \
+	zynq-trenz-7020.dtb \
 	zynq-zybo.dtb \
 	zynq-microzed.dtb \
 	zynq-cc108.dtb \
