Modification to manage 7015 and ZCB

--- a/arch/arm/mach-zynq/Kconfig
+++ b/arch/arm/mach-zynq/Kconfig
@@ -15,6 +15,9 @@ choice
 config TARGET_ZYNQ_TRENZ_7020
 	bool "Trenz 7020"
 
+config TARGET_ZYNQ_TRENZ_7015
+	bool "Trenz 7015"
+
 config TARGET_ZYNQ_ZTURN
 	bool "Zynq ZTurn"
 
@@ -65,6 +68,7 @@ config SYS_SOC
 
 config SYS_CONFIG_NAME
 	default "zynq_trenz_7020" if TARGET_ZYNQ_TRENZ_7020
+	default "zynq_trenz_7015" if TARGET_ZYNQ_TRENZ_7015
 	default "zynq_zturn" if TARGET_ZYNQ_ZTURN
 	default "zynq_zed" if TARGET_ZYNQ_ZED
 	default "zynq_microzed" if TARGET_ZYNQ_MICROZED
