--- a/configs/zynq_trenz_7015_defconfig
+++ b/configs/zynq_trenz_7015_defconfig
@@ -1,11 +1,12 @@
 CONFIG_ARM=y
 CONFIG_ARCH_ZYNQ=y
-CONFIG_DEFAULT_DEVICE_TREE="zynq-trenz-7020"
+CONFIG_TARGET_ZYNQ_TRENZ_7015=y
+CONFIG_DEFAULT_DEVICE_TREE="zynq-trenz-7015"
 CONFIG_SPL=y
 CONFIG_FIT=y
 CONFIG_FIT_VERBOSE=y
 CONFIG_FIT_SIGNATURE=y
-CONFIG_SYS_PROMPT="Zynq> "
+CONFIG_SYS_PROMPT="Zynq TE7015> "
 # CONFIG_CMD_IMLS is not set
 # CONFIG_CMD_FLASH is not set
 CONFIG_CMD_GPIO=y
